--- a/webplayer-example-next/package.json
+++ b/webplayer-example-next/package.json
@@ -13,6 +13,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@corellium/corellium-api": "^1.5.0",
     "@corellium/corellium-webplayer": "^1.0.11",
     "next": "12.3.1",
     "react": "18.2.0",
