--- a/webplayer-example-vanilla-js/package.json
+++ b/webplayer-example-vanilla-js/package.json
@@ -19,11 +19,13 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "https": "^1.0.0",
     "node-fetch": "^3.3.2",
     "post-me": "^0.4.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
