fix(vanilla-example): CORE-12789 - add helmet (#14)
* feat(vanilla-example): CORE-12789 - Add helmet to express vanilla example

* fix(package.json): CORE-12789 - Remove package manager thing

* feat(server.js): CORE-12789 - Add semicolons

---------

Co-authored-by: Brayden England <brayden@corellium.com>

--- a/webplayer-example-vanilla-js/package.json
+++ b/webplayer-example-vanilla-js/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "https": "^1.0.0",
     "node-fetch": "^3.3.2",
     "post-me": "^0.4.5"
